--- a/ms-products/pom.xml
+++ b/ms-products/pom.xml
@@ -19,7 +19,10 @@
             <artifactId>core-lib</artifactId>
             <version>0.0.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
