--- a/core-lib/pom.xml
+++ b/core-lib/pom.xml
@@ -18,6 +18,7 @@
         <java.version>16</java.version>
         <io-jwt.version>0.9.1</io-jwt.version>
         <springdoc-ui.version>1.5.10</springdoc-ui.version>
+        <jedis.version>3.6.3</jedis.version>
     </properties>
 
     <dependencies>
@@ -39,11 +40,21 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
         <!--DataBase-->
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>${jedis.version}</version>
+        </dependency>
+
 <!--        <dependency>-->
 <!--            <groupId>org.postgresql</groupId>-->
 <!--            <artifactId>postgresql</artifactId>-->
@@ -54,6 +65,7 @@
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
         </dependency>
+
         <!-- Security -->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
