--- a/ms-products/pom.xml
+++ b/ms-products/pom.xml
@@ -23,7 +23,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ru.tronin</groupId>
+            <artifactId>routing-lib</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+
     </dependencies>
+
 
     <build>
         <plugins>
