--- a/ms-delivery/pom.xml
+++ b/ms-delivery/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>core-lib</artifactId>
             <version>0.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>ru.tronin</groupId>
+            <artifactId>routing-lib</artifactId>
+            <version>0.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
