--- a/routing-lib/pom.xml
+++ b/routing-lib/pom.xml
@@ -20,9 +20,8 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
         <dependency>
-            <groupId>ru.tronin</groupId>
-            <artifactId>core-lib</artifactId>
-            <version>0.0.1</version>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
