--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -1,16 +1,24 @@
 
 server:
-  port: 8081
+  port: 8888
 
 spring:
   application:
     name: config-server
-
-  profiles:
-    active: native
-
   cloud:
     config:
       server:
-        native:
-          search-locations: classpath:/config
+        git:
+          uri: https://github.com/WomWear-Storage/womwear-config
+          default-label: main
+          username: WomWear-Storage
+          password: StorageForWomWear
+          clone-on-start: true
+
+#eureka:
+#  client:
+#    service-url:
+#      default-zone: ${EUREKA_URI:http://localhost:8761/eureka}
+
+#      jwt:
+#        secret: 71d1edd38fcf979690d07b2b840d98547d57ac2c79a45bc3218fb4d50
