--- a/ms-products/src/main/resources/application.yml
+++ b/ms-products/src/main/resources/application.yml
@@ -1,17 +1,13 @@
 server:
   port: 0
 
-spring:
-  application:
-    name: ms-products
-
 eureka:
   client:
     service-url:
       default-zone: ${EUREKA_URI:http://localhost:8761/eureka}
 
-sch:
-  value: 6000
+#sch:
+#  value: 6000
 
-jwt:
-  secret: 71d1edd38fcf979690d07b2b840d98547d57ac2c79a45bc3218fb4d50
+#jwt:
+#  secret: 71d1edd38fcf979690d07b2b840d98547d57ac2c79a45bc3218fb4d50
