frontend Server was added
TODO
Add Cart implementation
add order implementation

--- a/gateway-server/src/main/resources/application.yml
+++ b/gateway-server/src/main/resources/application.yml
@@ -43,6 +43,10 @@ spring:
           uri: lb://ms-orders
           predicates:
           - Path=/api/*/orders/**
+          - Path=/api/*/cart/**
+
+
+
 
         - id: ms-payments
           uri: lb://ms-payments
