--- a/ms-products/src/main/resources/application.yml
+++ b/ms-products/src/main/resources/application.yml
@@ -6,8 +6,12 @@ eureka:
     service-url:
       default-zone: ${EUREKA_URI:http://localhost:8761/eureka}
 
-#sch:
-#  value: 6000
+spring:
+  application:
+      name: ms-products
+
+
+
 
 #jwt:
 #  secret: 71d1edd38fcf979690d07b2b840d98547d57ac2c79a45bc3218fb4d50
